adding elements to the page
as well as styling

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,9 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -69,7 +71,7 @@
     }
   },
   "browser-sync": {
-    "enable": false,
+    "enable": true,
     "clicks": true,
     "forms": true,
     "scroll": true
